Implements new topic and new buttons

--- a/encuesta-django/polls/templates/polls/detail.html
+++ b/encuesta-django/polls/templates/polls/detail.html
@@ -33,6 +33,7 @@
        
         </fieldset>
         <input type="submit" value="Votar">
+        <a href="{% url 'polls:index' %}">HOME</a>
        
     </form>
 </body>
