--- a/encuesta-django/polls/static/polls/style.css
+++ b/encuesta-django/polls/static/polls/style.css
@@ -39,8 +39,13 @@ li {
     width: 500px;
 }
 a {
-    color: white;
+    color: #23cbd1;
     text-decoration: none;
+    border: 1px solid #2d9ddf;
+    font-size: 28px;
+    margin-bottom: 20px;
+    padding: 50px;
+    width: 500px;
 }
 footer {
     justify-content: space-evenly;
