--- a/encuesta-django/polls/templates/polls/results.html
+++ b/encuesta-django/polls/templates/polls/results.html
@@ -19,6 +19,7 @@
             <li>{{ choice.choice_text }} &nbsp; | &nbsp; {{ choice.votes }} vote{{ choice.votes|pluralize:"s"}}</li>
         {% endfor %}
     </ul>    
-    <a href="{% url 'polls:detail' question.id %}">Do you want to vote again?</a>
+    <a href="{% url 'polls:detail' question.id %}">¿Do you want to vote again?</a>
+    <a href="{% url 'polls:index' %}">HOME</a>
 </body>
 </html>
