--- a/encuesta-django/polls/templates/polls/index.html
+++ b/encuesta-django/polls/templates/polls/index.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'polls/reset.css' %}">
     <link rel="stylesheet" href="{% static 'polls/style.css' %}">
-    <title>Premios platzi App</title>
+    <title>Encuesta App</title>
 </head>
 <body>
     <header>
-        <h1> Premios Platzi App</h1>
+        <h1> Encuesta App</h1>
     </header>
     <main>
         {% if latest_question_list %}
