Updates views and css

--- a/encuesta-django/polls/templates/polls/detail.html
+++ b/encuesta-django/polls/templates/polls/detail.html
@@ -33,7 +33,10 @@
        
         </fieldset>
         <input type="submit" value="Votar">
-        <a href="{% url 'polls:index' %}">HOME</a>
+        <footer>
+            <a href="{% url 'polls:index' %}">HOME</a>
+        </footer>
+        
        
     </form>
 </body>
