--- a/encuesta-django/polls/static/polls/style.css
+++ b/encuesta-django/polls/static/polls/style.css
@@ -22,12 +22,17 @@ body {
 
 header {
     color: #71622d;
-    font-size: 72px;
+    font-size: 300%;
     height: 60px;
     padding: 100px 50px 50px;
+    margin: 20px;
 }
 
 ul{
+    /* height:max-content !important; */
+    /* width: auto; */
+    margin: auto;
+    padding: 0;
     flex-direction: column;
 }
 
@@ -35,20 +40,20 @@ li {
     border: 1px solid white;
     font-size: 28px;
     margin-bottom: 20px;
-    padding: 50px;
     width: 500px;
 }
 a {
     color: #23cbd1;
     text-decoration: none;
-    border: 1px solid #2d9ddf;
+    /* border: 1px solid #2d9ddf; */
     font-size: 28px;
     margin-bottom: 20px;
-    padding: 50px;
-    width: 500px;
+    width: 100%auto;
 }
 footer {
     justify-content: space-evenly;
     padding: 50px 0;
     width: 100vw;
 }
+
+
